--- a/Quality/Quality/Areas/BulkFGT/Views/FabricOvenTest/Index.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/FabricOvenTest/Index.cshtml
@@ -157,10 +157,10 @@
                                         Undo
                                     </h4>
                                 </td>
-                                <td style="width: 65%;">
+                                <td style="width: 55%;">
                                 </td>
                                 <td >
-                                    <h4 id="New">
+                                    <h4 id="New" style=" margin-right: 10em;">
                                         <img src="~/Image/Icon/New.png" width="30" />
                                         New Test No
                                     </h4>
@@ -446,7 +446,7 @@
                 msg.WithConfirm('Do you want to delete the data ?',
                 function ()
                 {
-                    }, null);
+                }, null);
 
             }
 
