ISP20211066 SendMail加一個欄位, 主要用於夾在server上的報表 加Oven測試

--- a/Quality/Quality/Areas/BulkFGT/Views/MockupCrocking/Index.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/MockupCrocking/Index.cshtml
@@ -11,7 +11,7 @@
     $(function () {
 
         $('#send').click(function () {
-            var para = "?TO=jack.hsu@sportscity.com.tw";
+            var para = "?TO=jeff.Yeh@sportscity.com.tw";
             window.open('@Url.Action("SendMailer", "SendMailAttachfiles", new { Area=""})' + para, 'SendMail', config = 'toolbar=no,status=no,location=no,width=650,height=400');
         });
 
